<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/navigation_map"
		android:icon="@drawable/ic_map_black_24dp"
		android:title="@string/title_map"
		android:iconTint="@color/colorPrimary"
		/>

	<item
		android:id="@+id/navigation_post"
		android:icon="@drawable/ic_camera_black_24dp"
		android:title="@string/title_post"
		android:iconTint="@color/colorPrimary"
		/>

	<item
		android:id="@+id/navigation_chat"
		android:icon="@drawable/ic_chat_black_24dp"
		android:title="@string/title_chat"
		android:iconTint="@color/colorPrimary"/>


	<item
		android:id="@+id/navigation_profile"
		android:icon="@drawable/ic_person_black_24dp"
		android:title="@string/title_profile"
		android:iconTint="@color/colorPrimary"/>

</menu>
