<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ForgetPasswordFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/reset_password_get_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_message"
                android:textSize="17sp"
                android:textColor="@color/colorPrimary" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textSize="17sp"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/reset_password_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_rectangle_border"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/reset_password_invalid_email_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invalid_email"
                android:textSize="15sp"
                android:textColor="@color/colorInvalid"
                android:visibility="gone"/>

            <Button
                android:id="@+id/reset_password_email_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/reset_password"
                android:textSize="18sp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/reset_password_authen_code_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset_password_code_message"
                android:textSize="17sp"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/reset_password_authen_code_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/black_rectangle_border"
                android:textSize="24sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/forget_password_invalid_authen_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invalid_authen_code"
                android:textColor="@color/colorInvalid"
                android:visibility="gone"/>

            <Button
                android:id="@+id/reset_password_submit_authen_code_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/submit"
                android:textSize="19sp"
                android:background="@color/buttons"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/new_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/forget_password_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_rectangle_border"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/reset_password_weak_password_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weak_password"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/confirm_password"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/reset_password_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/black_rectangle_border"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/reset_password_mismatch_password_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_mismatch"
                android:textColor="@color/colorInvalid"
                android:textSize="15sp"
                android:visibility="gone"/>

            <Button
                android:id="@+id/reset_password_submit_new_password_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/submit"
                android:textSize="19sp"/>
        </LinearLayout>

    </FrameLayout>

</android.support.constraint.ConstraintLayout>